# aider

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml
.github/: copilot-instructions.md
aider/: args.py  commands.py  llm.py  main.py  models.py  onboarding.py  openai_compatible.py  simple_llm.py  typing_example.py
aider/coders/: base_coder.py  base_coder.py.backup  coder_base.py  coder_impl.py  commit_manager.py  file_manager.py  lint_test_manager.py  message_formatter.py  platform_detector.py  shell_command_manager.py  token_calculator.py
aider/website/assets/: sample.env
aider/website/docs/config/: dotenv.md
aider/website/docs/llms/: openai-compat.md
docs/: TYPE_HINTS_IMPLEMENTATION.md
go-aider/: go.mod  go.sum
go-aider/cmd/aider/: main.go
go-aider/internal/agents/: agents.go  agents_test.go
go-aider/internal/chat/: session.go  session_test.go
go-aider/internal/commands/: commands.go  commands_test.go
go-aider/internal/config/: config.go  config_test.go
go-aider/internal/llm/: client.go  client_test.go  types.go
go-aider/internal/models/: models.go  models_test.go
go-aider/internal/prompts/: prompts.go  prompts_test.go
go-aider/internal/render/: markdown.go  markdown_test.go
node-aider/: package-lock.json  package.json  tsconfig.json
node-aider/src/: agents.ts  chat.ts  commands.ts  config.ts  index.ts  llm.ts  marked-terminal.d.ts  models.ts  prompts.ts  render.ts  types.ts
node-aider/tests/: agents.test.ts  chat.test.ts  commands.test.ts  config.test.ts  llm.test.ts  models.test.ts  prompts.test.ts  render.test.ts
requirements/: requirements-dev.in
tests/basic/: test_coder.py  test_commands.py  test_llm_proxy.py  test_main.py  test_onboarding.py  test_openai_compatible.py  test_simple_llm.py  test_typing_example.py
