
[project]
name = "aider-chat"
description = "Aider is AI pair programming in your terminal"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/Aider-AI/aider"

[project.scripts]
aider = "aider.main:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/requirements-dev.txt" }
help = { file = "requirements/requirements-help.txt" }
browser = { file = "requirements/requirements-browser.txt" }
playwright = { file = "requirements/requirements-playwright.txt" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aider"]

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "aider/_version.py"

[tool.codespell]
skip = "*.svg,Gemfile.lock,tests/fixtures/*,aider/website/assets/*"
write-changes = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Start with minimal strictness and progressively enable
# disallow_untyped_defs = false allows gradual typing adoption
# Can be set to true once codebase has comprehensive type hints

[[tool.mypy.overrides]]
module = [
    "babel.*",
    "git.*",
    "git",
    "litellm.*",
    "networkx.*",
    "openai.*",
    "pathspec.*",
    "prompt_toolkit.*",
    "pyperclip.*",
    "scipy.*",
    "sounddevice.*",
    "soundfile.*",
    "tiktoken.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "grep_ast.*",
    "imgcat.*",
    "pygments.*",
    "rich.*",
    "playwright.*",
    "oslex.*",
]
ignore_missing_imports = true
